# The_Game_of_Gradients

./: .gitignore  Cargo.toml  README.md  index.html  the_game_of_gradients.js  the_game_of_gradients_bg.wasm.d.ts
src/: constants.rs  gradient_field.rs  levData.txt  level.rs  lib.rs  main.rs  ui.rs  ui_functions.rs
src/game/: constants.rs  gradient_field.rs  mod.rs  player.rs  ui.rs
src/webpage/: app.rs  mod.rs
web/: README.md  index.html
